--- a/src/alpha/langs/lang.en.json
+++ b/src/alpha/langs/lang.en.json
@@ -56,6 +56,7 @@
             "banall": "bans all users in the room",
             "status": "shows status of plug servers",
             "unload": "Closes plug&#179;",
+            "unban": "Unbans targeted user.",
             "volume": "Set volume with a number (0 - 100), increase by 1 with +, decrease by 1 with -"
         },
         "responses": {
@@ -267,6 +268,9 @@
         "show": "Show",
         "hide": "Hide",
         "menushow": "Show Video",
-        "menuhide": "Hide Video"
+        "menuhide": "Hide Video",
+        "hidden": "Video Hidden",
+        "disabled": "Video Disabled",
+        "snooze": "Video Snoozed"
     }
 }
